--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Kestrel": {
+    "EndPoints": {
+      "Https": {
+        "Url": "https://localhost:4300"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "DefaultAdmin": {
     "DisplayName": "Admin",
